--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,16 +10,18 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:theme="@style/AppTheme.NoActionBar"
-            android:name=".RegisterActivity"></activity>
+            android:name=".RegisterActivity">
+        </activity>
         <activity android:theme="@style/AppTheme.NoActionBar"
-            android:name=".LoginActivity">
+            android:name=".LoginActivity"></activity>
+        <activity android:theme="@style/AppTheme.NoActionBar"
+            android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity"/>
     </application>
 
 </manifest>
