--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Mar 19 00:19:59 PKT 2020
-sdk.dir=/home/anas_raza/Android/Sdk
+#Fri Mar 20 02:07:31 PKT 2020
+sdk.dir=C\:\\Users\\Hamza\\AppData\\Local\\Android\\Sdk
