--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,19 +9,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:theme="@style/AppTheme.NoActionBar"
-            android:name=".RegisterActivity">
-        </activity>
-        <activity android:theme="@style/AppTheme.NoActionBar"
-            android:name=".LoginActivity"></activity>
-        <activity android:theme="@style/AppTheme.NoActionBar"
-            android:name=".MainActivity">
+        <activity android:name=".JobActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".HelperActivity" />
+        <activity android:name=".RegisterActivity" />
+        <activity android:name=".LoginActivity" />
+        <activity android:name=".MainActivity"></activity>
     </application>
 
 </manifest>
