--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,15 +11,18 @@
         android:theme="@style/AppTheme">
         <activity android:name=".JobActivity"/>
         <activity android:name=".HelperActivity" />
+        <activity android:name=".UserLoginActivity" />
         <activity android:name=".RegisterActivity">
+
+        </activity>
+        <activity android:name=".LoginActivity" />
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".LoginActivity" />
-        <activity android:name=".MainActivity"></activity>
     </application>
 
 </manifest>
