--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Mar 20 21:06:38 PKT 2020
-sdk.dir=/home/anas_raza/Android/Sdk
+#Sat Mar 21 05:15:31 PKT 2020
+sdk.dir=C\:\\Users\\Hamza\\AppData\\Local\\Android\\Sdk
