--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,12 +9,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".JobActivity"/>
+        <activity android:name=".ViewAllHelpersActivity"></activity>
+        <activity android:name=".ViewAllUsersActivity" />
+        <activity android:name=".JobActivity" />
         <activity android:name=".HelperActivity" />
         <activity android:name=".UserLoginActivity" />
-        <activity android:name=".RegisterActivity">
-
-        </activity>
+        <activity android:name=".RegisterActivity" />
         <activity android:name=".LoginActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
