--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ViewAllHelpersActivity"></activity>
+        <activity android:name=".NotificationActivity"></activity>
+        <activity android:name=".ViewAllHelpersActivity" />
         <activity android:name=".ViewAllUsersActivity" />
         <activity android:name=".JobActivity" />
         <activity android:name=".HelperActivity" />
